# cookiecutter-rbfx

./: LICENSE  README.md  cookiecutter.json
.github/workflows/: nightly.yml  pr.yml  weekly.yml
docs/: 2d-game-tutorial.md
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  CMakeLists.txt  ResourceRoot.ini
{{cookiecutter.project_slug}}/Project/: Project.json
{{cookiecutter.project_slug}}/Project/Data/Fonts/: README.md
{{cookiecutter.project_slug}}/Project/Data/Images/: README.md
{{cookiecutter.project_slug}}/Project/Data/Materials/: README.md
{{cookiecutter.project_slug}}/Project/Data/Scenes/: README.md
{{cookiecutter.project_slug}}/Project/Data/Sounds/: README.md
{{cookiecutter.project_slug}}/Project/Data/Textures/: README.md
{{cookiecutter.project_slug}}/Project/Data/UI/: README.md
{{cookiecutter.project_slug}}/Source/Application/: CMakeLists.txt  SampleProject.cpp  SampleProject.h
{{cookiecutter.project_slug}}/Source/Launcher/: CMakeLists.txt
{{cookiecutter.project_slug}}/android/: build.gradle
